RESOLVED FIXED162550
[Win][Debug] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=162550
Summary [Win][Debug] Compile fix.
Per Arne Vollan
Reported 2016-09-26 01:27:18 PDT
WebCore::SimpleLineLayout::FragmentForwardIterator is missing the == operator: 1>C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\include\xutility(947): error C2678: binary '==': no operator found which takes a left-hand operand of type 'WebCore::SimpleLineLayout::FragmentForwardIterator' (or there is no acceptable conversion)
Attachments
Patch (1.29 KB, patch)
2016-09-26 02:27 PDT, Per Arne Vollan
no flags
Patch (1.29 KB, patch)
2016-09-26 02:35 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2016-09-26 02:10:55 PDT
The '==' operator is needed in debug mode. From xutility: // TEMPLATE FUNCTION _Debug_range template<class _InIt> inline void _Debug_range2(_InIt _First, _InIt _Last, _Dbfile_t, _Dbline_t, input_iterator_tag) { // test iterator pair for valid range, arbitrary iterators static_cast<void>(_First == _Last); // make sure they're comparable }
Per Arne Vollan
Comment 2 2016-09-26 02:27:23 PDT
Per Arne Vollan
Comment 3 2016-09-26 02:33:08 PDT
Per Arne Vollan
Comment 4 2016-09-26 02:35:44 PDT
WebKit Commit Bot
Comment 5 2016-09-26 08:25:38 PDT
Comment on attachment 289813 [details] Patch Clearing flags on attachment: 289813 Committed r206375: <http://trac.webkit.org/changeset/206375>
WebKit Commit Bot
Comment 6 2016-09-26 08:25:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.