[Win][Debug] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=162550

Reviewed by Alex Christensen.

Windows headers need the FragmentForwardIterator '==' operator in debug mode.

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::FragmentForwardIterator::operator==):


Canonical link: https://commits.webkit.org/180498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206375 268f45cc-cd09-0410-ab3c-d52691b4dbfc